fdo#43532 Partial revert of "...template names appear... correct word order"

Sorting the sfx2-based list boxes does not work as SfxDocumentTemplates uses a
different collating order (plain Unicode code points) than the list boxes, so
that e.g. "en-US" comes last in SfxDocumentTemplates but not in the list boxes.
Even with that fixed, insertions into SfxOrganizeDlg_Impl would still not work
right.

This reverts the sfx2 parts of commits 50b7733fa41879a62d35cab64da59b109e1a8502
and df59068902b294b7b344af0c20da196cc64aaced.